--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body
 <ol>
 <li><a href="homework-0">Digital Assignment 0</a></li>
 <li><a href="homework-1">Digital Assignment 1</a></li>
+<li><a href="homework-2">Digital Assignment 2</a></li>
 </ol>
 
 
