--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="homework-0">Digital Assignment 0</a></li>
 <li><a href="homework-1">Digital Assignment 1</a></li>
 <li><a href="homework-2">Digital Assignment 2</a></li>
+<li><a href="homework-3">Digital Assignment 3</a></li>
 </ol>
 
 
