Game Iteration Sequence 1 Digital Iteration

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ body
 <li><a href="homework-1">Digital Assignment 1</a></li>
 <li><a href="homework-2">Digital Assignment 2</a></li>
 <li><a href="homework-3">Digital Assignment 3</a></li>
-<li><a href="homework-4">Digital Itteration of Physical Prototype</a></li>
+<li><a href="homework-4">Game Iteration Sequence 1 Digital Assignment</a></li>
+<li><a href="homework-5">Game Iteration Sequence 1 Digital Iteration</a></li>
 </ol>
 
 
